[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyweblight"
version = "0.0.6"
requires-python = ">=3.12"
authors = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
maintainers = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
description = "Pyweblight is a small configurable web server for developers"
readme = "README.md"
license = "MIT"
keywords=[
    "http",
    "https",
    "apache",
    "python",
    "python3",
    "server",
    "web",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "python-daemon",
    "pytconf",
    "pylogconf",
    "multipart",
]

[project.urls]
"Homepage" = "https://github.com/veltzer/pyweblight"
"Bug Tracker" = "https://github.com/veltzer/pyweblight/issues"
"Documentation" = "https://veltzer.github.io/pyweblight"
"Download" = "https://pypi.org/project/pyweblight/"
"Repository" = "https://github.com/veltzer/pyweblight"

[project.scripts]
pyweblight = "pyweblight.main:main"

[tool.ruff]
line-length = 130

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pyweblight"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pyweblight/",
    "README.md",
    "LICENSE",
    "pyproject.toml"
]
exclude = [
    ".gitignore",
    ".github/",
    "tests/",
    "docs/",
    "config/",
    "*.md",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.hatch.envs.default]
installer = "uv"
